syntax = "proto3";

message DataMessage { //1512 bytes constraint
  uint32 regen_enabled = 1;
  uint32 regen_command = 2;
  float battery_power = 3;
  float array_power = 4;
  uint32 reverse_on = 5;
  float low_volt_power = 6;
  int32 cell_read_error = 7;
  uint32 cell_bleed = 8;
  float cruise_speed = 9;
  int32 hazard_lights_on = 10;
  float battery_voltage = 11;
  uint32 ltc6804_badpec = 12;
  uint32 bms_state = 13;
  int32 charge_enabled = 14;
  int32 discharge_enabled = 15;
  int32 highside_contactor_on = 16;
  int32 lowside_contactor_on = 17;
  int32 precharge_on = 18;
  int32 low_volt_bus_on = 19;
  float battery_temp_1 = 20;
  float battery_temp_2 = 21;
  float battery_temp_3 = 22;
  float battery_temp_4 = 23;
  float battery_temp_5 = 24;
  float battery_temp_6 = 25;
  float bms_precharge_battery_adc = 26;
  float bms_precharge_car_adc = 27;
  //gap
  float low_volt_output_current = 29;
  float array_current = 30;
  float battery_current = 31;
  float left_motor_controller_power = 32;
  float right_motor_controller_power = 33;
  float amp_hours = 34;
  int32 head_lights_on = 35;
  int32 brake_lights_on = 36;
  int32 right_blinker_on = 37;
  int32 left_blinker_on = 38;
  int32 brake_pressed = 39;
  int32 throttle_pressed = 40;
  uint32 drive_mode = 41;
  int32 motor_controller_enabled = 42;
  float motor_controller_speed = 43;
  float motor_controller_rpm = 44;
  float avg_odometer = 45; //???
  float left_motor_temp = 46;
  float right_motor_temp = 47;
  float left_motor_controller_temp = 48;
  float right_motor_controller_temp = 49;
  float left_motor_controller_alive = 50;
  float right_motor_controller_alive = 51;
  float left_motor_controller_current = 52;
  float right_motor_controller_current = 53;
  float motor_controller_current_diff = 54;
  uint32 left_motor_controller_error = 55;
  uint32 right_motor_controller_error = 56;
  uint32 left_motor_controller_limit = 57;
  uint32 right_motor_controller_limit = 58;
  uint32 left_motor_controller_rx_error_count = 59;
  uint32 right_motor_controller_rx_error_count = 60;
  uint32 left_motor_controller_tx_error_count = 61;
  uint32 right_motor_controller_tx_error_count = 62;
  float left_motor_controller_bus_voltage = 63;
  float right_motor_controller_bus_voltage = 64;
  float left_motor_controller_15v_voltage = 65;
  float right_motor_controller_15v_voltage = 66;
  float left_motor_controller_3v3_voltage = 67;
  float right_motor_controller_3v3_voltage = 68;
  float left_motor_controller_1v9_voltage = 69;
  float right_motor_controller_1v9_voltage = 70;
  float left_motor_controller_dsp_temp = 71;
  float right_motor_controller_dsp_temp = 72;
  float left_motor_controller_phase_current = 73;
  float right_motor_controller_phase_current = 74;
  float left_motor_rpm_command = 75;
  float right_motor_rpm_command = 76;
  float left_motor_current_command = 77;
  float right_motor_current_command = 78;
  int64 gps_time = 80;
  float gps_latitude = 81;
  float gps_longitude = 82;
  float gps_speed = 83;
  float gps_altitude = 84;
  float gps_bearing = 85;
  int32 led_state = 86;
  float mppt_array_power = 87;
  float mppt_A0_volt_in = 88;
  float mppt_A0_volt_out = 89;
  float mppt_A0_current = 90;
  float mppt_A0_temp = 91;
  float mppt_A1_volt_in = 92;
  float mppt_A1_volt_out = 93;
  float mppt_A1_current = 94;
  float mppt_A1_temp = 95;
  float mppt_B0_volt_in = 96;
  float mppt_B0_volt_out = 97;
  float mppt_B0_current = 98;
  float mppt_B0_temp = 99;
  float mppt_B1_volt_in = 100;
  float mppt_B1_volt_out = 101;
  float mppt_B1_current = 102;
  float mppt_B1_temp = 103;
  float mppt_C0_volt_in = 104;
  float mppt_C0_volt_out = 105;
  float mppt_C0_current = 106;
  float mppt_C0_temp = 107;
  float mppt_C1_volt_in = 108;
  float mppt_C1_volt_out = 109;
  float mppt_C1_current = 110;
  float mppt_C1_temp = 111;
  float mppt_D0_volt_in = 112;
  float mppt_D0_volt_out = 113;
  float mppt_D0_current = 114;
  float mppt_D0_temp = 115;
  float mppt_D1_volt_in = 116;
  float mppt_D1_volt_out = 117;
  float mppt_D1_current = 118;
  float mppt_D1_temp = 119;
  float cell_volt_1 = 120;
  float cell_volt_2 = 121;
  float cell_volt_3 = 122;
  float cell_volt_4 = 123;
  float cell_volt_5 = 124;
  float cell_volt_6 = 125;
  float cell_volt_7 = 126;
  float cell_volt_8 = 127;
  float cell_volt_9 = 128;
  float cell_volt_10 = 129;
  float cell_volt_11 = 130;
  float cell_volt_12 = 131;
  float cell_volt_13 = 132;
  float cell_volt_14 = 133;
  float cell_volt_15 = 134;
  float cell_volt_16 = 135;
  float cell_volt_17 = 136;
  float cell_volt_18 = 137;
  float cell_volt_19 = 138;
  float cell_volt_20 = 139;
  float cell_volt_21 = 140;
  float cell_volt_22 = 141;
  float cell_volt_23 = 142;
  float cell_volt_24 = 143;
  float cell_volt_25 = 144;
  float cell_volt_26 = 145;
  float cell_volt_27 = 146;
  float cell_volt_28 = 147;
  float cell_volt_29 = 148;
  float cell_volt_30 = 149;
  float cell_volt_31 = 150;
  float cell_volt_min = 151;
  float cell_volt_max = 152;
  float cell_volt_avg = 153; //not in use
  float cell_volt_diff = 154;
  int32 power_save_on = 155;
  int32 rearview_on = 156;
  int32 mic_enabled = 157;
  int32 imu_temp = 158;
  int32 imu_magnet_x = 159;
  int32 imu_magnet_y = 160;
  int32 imu_magnet_z = 161;
  int32 imu_gyro_x = 162;
  int32 imu_gyro_y = 163;
  int32 imu_gyro_z = 164;
  int32 imu_accel_x = 165;
  int32 imu_accel_y = 166;
  int32 imu_accel_z = 167;
  float bms_left_motor_controller_current = 168;
  float bms_right_motor_controller_current = 169;
  float bms_motor_controller_current_sum = 170;
  float packets_per_sec = 171;
}
